# rasqal

./: .cvsignore  .gitignore  .gitmodules  .travis.yml  000-README-GIT.txt  AGENTS.md  AUTHORS  ChangeLog  ChangeLog.10  ChangeLog.11  ChangeLog.12  ChangeLog.3  ChangeLog.5  ChangeLog.6  ChangeLog.7  ChangeLog.8  ChangeLog.9  INSTALL.html  LICENSE.html  Makefile.am  NEWS.html  README.html  RELEASE.html  TODO.html  autogen.sh  configure.ac  example4.rdql  example_at_2.rdql  example_at_7.rdql  fix-groff-xhtml  rasqal-src-config.in  rasqal.pc.in  rasqal.rdf.in  rasqal.spec.in  rasqal_config.h.in  rasqal_sequence.c  rasqal_xml.c
docs/: .cvsignore  .gitignore  Makefile.am  README.html  api.sgml.in  librasqal.3  rasqal-changes.tsv  rasqal-docs.xml  rasqal-overrides.txt  rasqal-query-engine-architecture.xml  rasqal-sections.txt  rasqal-tutorial-query-results-compare.xml  rasqal-util-rasqal-compare.xml  rasqal-util-roqet.xml
docs/tmpl/: rasqal-unused.sgml  section-data-sets.sgml  section-data.sgml  section-expression.sgml  section-general.sgml  section-graph_pattern.sgml  section-literal.sgml  section-prefix.sgml  section-query.sgml  section-query_results.sgml  section-query_results_formatter.sgml  section-random.sgml  section-row.sgml  section-service.sgml  section-triple.sgml  section-triples_source.sgml  section-unused.sgml  section-updates.sgml  section-utilities.sgml  section-variable.sgml  section-variables-table.sgml  section-xsd.sgml
getopt/: .gitignore  Makefile.am
src/: .cvsignore  .gitignore  Makefile.am  fix-bison  fix-flex  gettimeofday.c  mtwist_config.h  rasqal-config.1  rasqal-config.in  rasqal.h  rasqal.h.in  rasqal_algebra.c  rasqal_bindings.c  rasqal_data_graph.c  rasqal_data_graphs_set.c  rasqal_dataset.c  rasqal_datetime.c  rasqal_decimal.c  rasqal_digest.c  rasqal_digest_md5.c  rasqal_digest_sha1.c  rasqal_double.c  rasqal_empty_rowsource.c  rasqal_engine.c  rasqal_engine_algebra.c  rasqal_engine_rowsource.c  rasqal_engine_sort.c  rasqal_expr.c  rasqal_expr_datetimes.c  rasqal_expr_evaluate.c  rasqal_expr_exists_test.c  rasqal_expr_numerics.c  rasqal_expr_strings.c  rasqal_expr_unbound_test.c  rasqal_feature.c  rasqal_format_csv.c  rasqal_format_html.c  rasqal_format_json.c  rasqal_format_rdf.c  rasqal_format_sparql_xml.c  (+86 more)
tests/: .gitignore  Makefile.am  example_at_1.rdql  example_at_3.rdql  example_at_4.rdql  example_at_5.rdql  example_at_6.rdql  example_at_7.rdql  example_at_8.rdql  improve  improve.py  rasqal-sparql.md  rasqal_order_test.c  rasqal_test_util.py  state.md  test-suites.md  test_crash_detection.py  testing.md
tests/algebra/: .gitignore  Makefile.am  Makefile.in  check-algebra  check_algebra.py  convert_graph_pattern.c  manifest.ttl  test-01.out  test-01.rq  test-02.out  test-02.rq  test-03.out  test-03.rq  test-04.out  test-04.rq  test-05.out  test-05.rq  test-06.out  test-06.rq  test-07.out  test-07.rq  test-08.out  test-08.rq  test-09.out  test-09.rq
tests/brql/: D.n3  E.n3  Makefile.am  Q-C-1  Q-C-2  Q-D-1  Q-D-2  Q-D-3  Q-F2F3-1  Q-F2F3-2  Q-OPT-1  Q-OPT-2  Q-S-1  Q-S-2  Q-SOURCE-1  Q-SOURCE-2
tests/engine/: .gitignore  Makefile.am  manifest-limit.ttl  manifest.ttl  rasqal_construct_test.c  rasqal_execute2_test.c  rasqal_graph_test.c  rasqal_limit_test.c  rasqal_order_test.c  rasqal_triples_test.c
tests/laqrs/: Makefile.am  check-laqrs
tests/laqrs/syntax/: Makefile.am  agg-function1.rq  avg1.rq  bad-select-expr.rq  bnode1.rq  bnode2.rq  bug156.rq  coalesce1.rq  count2.rq  count4.rq  coverage.rq  explain.rq  function-distinct1.rq  group-by1.rq  if1.rq  in1.rq  in2.rq  iri1.rq  let1.rq  let1.ttl  let2.rq  let3.rq  let3.ttl  let4.rq  manifest-bad.ttl  manifest.ttl  max1.rq  min1.rq  strdt1.rq  strdt2.rq  strlang1.rq  sum1.rq
tests/rdql/: Makefile.am
tests/rdql/testsuite/: Makefile.am  check-rdql  result-B-07.n3  result-B-20.n3  result-S-01.n3  result-S-03.n3  tests2turtle.patch
tests/sparql/: .gitignore  Makefile.am  check-sparql  check-sparql.py  check_sparql.py  format_test_base.py  generate_sparql_plan.py  package_sparql_tests.py
tests/sparql/Expr1/: Makefile.am  expr-1.rq  expr-2.rq  expr-3.rq
tests/sparql/Expr2/: Makefile.am  query-bev-1.rq  query-bev-3.rq  query-bev-4.rq  query-bev-5.rq  query-bev-6.rq
tests/sparql/ExprBuiltins/: Makefile.am  data-builtin-1.ttl  manifest.ttl  q-datatype-1.rq  q-str-1.rq  q-str-2.rq  q-str-3.rq  q-str-4.rq  result-str-4.ttl
tests/sparql/ExprEquals/: Makefile.am  data-eq.ttl  manifest-failures.n3  manifest.n3  query-eq-1.rq  query-eq-2.rq  query-eq-3.rq  query-eq-4.rq  query-eq-5.rq  query-eq2-1.rq  result-eq2-1.ttl
tests/sparql/SyntaxDev/: Makefile.am
tests/sparql/SyntaxFull/: Makefile.am  manifest.ttl  syntax-expr-01.rq  syntax-order-02.rq  syntax-order-03.rq  syntax-order-04.rq  syntax-order-05.rq  syntax-qname-08.rq  syntax-query-pat-01.rq  syntax-query-pat-02.rq  syntax-query-pat-03.rq  syntax-query-pat-04.rq  syntax-query-pat-05.rq
tests/sparql/ValueTesting/: Makefile.am  boolean-0.n3  boolean-EBV-canonical-result.n3  boolean-EBV-canonical.rq  boolean-equiv-FALSE-result.n3  boolean-equiv-FALSE.rq  boolean-equiv-TRUE-result.n3  boolean-equiv-TRUE.rq  boolean-equiv-xsdType-result.n3  boolean-equiv-xsdType.rq  boolean-false-canonical-result.n3  boolean-false-canonical.rq  boolean-logical-OR-result.n3  boolean-logical-OR.rq  boolean-true-canonical-result.n3  boolean-true-canonical.rq  dateTime-tz0.rq  dateTime-tz1.rq  extendedType-0.n3  extendedType-eq-pass-result.n3  extendedType-eq-pass.rq  extendedType-graph-result.n3  extendedType-graph.rq  extendedType-literal-eq-result.n3  manifest.n3  (+8 more)
tests/sparql_test_framework/: Makefile.am  __init__.py  config.py  execution.py  manifest.py  test_types.py  utils.py
utils/: .cvsignore  .gitignore  Makefile.am  README-mcp-server.md  check_query.c  compare_results.c  getopt.c  manifest.c  manifest.h  rasqal-compare.1  rasqal-compare.c  rasqal-compare.html  rasqal-mcp-server.c  rasqal_getopt.h  rasqalcmdline.h  rdfr_read.c  read_files.c  results.c  roqet.1  roqet.c  srxread.c  srxwrite.c  test-mcp-server.py  testrunner.c  to-ntriples.c
(+503 files in other folders)
